# IFTTT-Privacy

./: .env  docker-compose.yml  makefile
SEAL/native/examples copy/: CMakeCache.txt  CMakeLists.txt  Makefile  SEALExamples.vcxproj  cmake_install.cmake  examples.cpp  examples.h  subs.cpp
sensor/:     """  1  crypto.py  dockerfile  encrypt.py  ifttt_sensor_1  ifttt_sensor_2  ifttt_sensor_3  ifttt_server_1  phone_config.json  sealexamples  sensor.py  sk.txt
server/: avg_temp  configurer.py  dockerfile  gen_config.py  homomorphic_computations.py  phone_config.json  phone_config.json.old  sealexamples  sensor_config.json  server.py  server_to_switch.json  switch_config.json  tmp10071575490898.115879  tmp1291575490935.2481382  tmp1451575490893.9739463  tmp1661575490916.2116618  tmp2081575490884.3142214  tmp2661575490921.5441468  tmp3331575490878.1125906  tmp3341575490905.6343176  tmp3891575490904.6346235  tmp4401575490921.5390525  tmp451575490936.528758  tmp4661575490892.7892945  tmp4781575490921.5480878  tmp4801575490905.6298048  tmp5441575490899.306747  tmp551575490926.8297582  tmp5581575490929.9564893  tmp5621575490910.9450562  tmp5681575490882.12804  tmp5681575490932.106928  tmp5781575490945.7970424  tmp5901575490910.935436  tmp5971575490884.3259387  tmp5971575490893.984754  tmp5981575490887.4163043  tmp6191575490876.8515806  tmp6361575490940.5280244  tmp6641575490873.7531796  (+13 more)
switch/: crypto.py  decrypt.py  dockerfile  phone_config.json  phone_to_switch.json  rule.py  sealexamples  switch.py
tester/: dockerfile  receiver.py  sender.py  tester.py  tests.tsv
(+28 files in other folders)
